More stuff... and making it now live

--- a/dist.ini
+++ b/dist.ini
@@ -7,6 +7,14 @@ copyright_year   = 2013
 [@Author::GETTY]
 
 [Prereqs]
+Moo = 0
+IO::All = 0
+IO::All::LWP = 0
+Archive::Extract = 0
+Path::Tiny = 0
+JSON_File = 0
+CPAN::Perl::Releases = 1.42
+File::ReadBackwards = 0
 
 [Prereqs / TestRequires]
 Test::More = 0.98
