--- a/dist.ini
+++ b/dist.ini
@@ -15,6 +15,8 @@ Path::Tiny = 0
 JSON_File = 0
 CPAN::Perl::Releases = 1.42
 File::ReadBackwards = 0
+namespace::autoclean = 0
+MooX::Options = 0
 
 [Prereqs / TestRequires]
 Test::More = 0.98
