Switched from Path::Tiny to Path::Class to be fatpackable

--- a/dist.ini
+++ b/dist.ini
@@ -12,10 +12,11 @@ MooX::Options = 0
 IO::All = 0
 IO::All::LWP = 0
 Archive::Extract = 0
-Path::Tiny = 0
+Path::Class = 0
 JSON_File = 0
 CPAN::Perl::Releases = 1.42
-namespace::autoclean = 0
+Module::CPANfile = 0
+namespace::clean = 0
 
 [Prereqs / TestRequires]
 Test::More = 0.98
