Added fatpack for release process, removed old requirement

--- a/dist.ini
+++ b/dist.ini
@@ -5,10 +5,10 @@ copyright_holder = Torsten Raudssus
 copyright_year   = 2013
 
 [@Author::GETTY]
+run_release = fatpack pack bin/installer >index.txt && scp index.txt root@stardestroyer.de:/srv/http/installer.pm/
 
 [Prereqs]
 Moo = 0
-MooX::Options = 0
 IO::All = 0
 IO::All::LWP = 0
 Archive::Extract = 0
